name:                type-level
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/vzaccaria/type-level#readme
license:             BSD3
license-file:        LICENSE
author:              Vittorio Zaccaria
maintainer:          vittorio.zaccaria@gmail.com
copyright:           2016 Vittorio Zaccaria
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable type-level
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
